Add layout endpoints
